[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "common_utilities"
version = "1.0.0"
description = "Shared MQTT, logging, and utilities for my energy projects"
authors = [
  { name = "Phil" }
]
dependencies = [
  "loguru>=0.7.3"
]
requires-python = ">=3.8"